# postgres

./: meson.build
subprojects/rlibv2/: meson.build
subprojects/rlibv2/c_wrappers/: rdmaio_config_c.h  rdmaio_impl_c.h  rdmaio_lib_c.h  rdmaio_mem_c.h  rdmaio_nic_c.h  rdmaio_qp_c.h  rdmaio_qpattr_c.h  rdmaio_rc_c.h  rdmaio_rc_recv_manager_c.h  rdmaio_rctrl_c.h  rdmaio_recv_iter_c.h  rdmaio_reg_handler_c.h  rdmaio_regattr_c.h  rdmaio_result_c.h
subprojects/rlibv2/c_wrappers/impl/: rdmaio_config_c.cpp  rdmaio_impl_c.cpp  rdmaio_lib_c.cpp  rdmaio_mem_c.cpp  rdmaio_nic_c.cpp  rdmaio_rc_c.cpp  rdmaio_rc_recv_manager_c.cpp  rdmaio_rctrl_c.cpp  rdmaio_recv_iter_c.cpp  rdmaio_reg_handler_c.cpp
subprojects/rlibv2/core/qps/: dc.hh  impl.hh  recv_iter.hh
